Did most of the bill container and Initiated the Tip container

--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
   </div>
 
   <div id="main-container">
-    <div id="bill-container"></div>
-    <div id="tip-container"></div>
+    <div id="bill-container">
+      <h4>Bill</h4>
+      <input type="text">
+    </div>
+    <div id="tip-container">
+      <h4>Select Tip %</h4>
+    </div>
     <div id="peopleAmount-container"></div>
     <div id="final-container"></div>
   </div>
