Made most of the tip-container

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
     </div>
     <div id="tip-container">
       <h4>Select Tip %</h4>
+      <input type="button" class="tip-button" value="5%">
+      <input type="button" class="tip-button" value="10%">
+      <input type="button" class="tip-button" value="15%">
+      <input type="button" class="tip-button" value="25%">
+      <input type="button" class="tip-button" value="50%">
+      <input type="button" class="tip-button" value="Custom">
     </div>
     <div id="peopleAmount-container"></div>
     <div id="final-container"></div>
