Did most of the Number of Peoople container

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
       <input type="button" class="tip-button" value="50%">
       <input type="button" class="tip-button" value="Custom">
     </div>
-    <div id="peopleAmount-container"></div>
+    <div id="peopleAmount-container">
+      <h4>Number of People</h4>
+      <input type="text" class="nbofPeopleInput"value="">
+    </div>
     <div id="final-container"></div>
   </div>
 
