Changed the font family and color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;400&family=Roboto&family=Space+Mono:wght@400;700&display=swap"
+    rel="stylesheet">
 
   <title>Frontend Mentor | Tip calculator app</title>
 
@@ -62,7 +67,7 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
     </div>
     <div id="peopleAmount-container">
       <h4>Number of People</h4>
-      <input type="text" class="nbofPeopleInput"value="">
+      <input type="text" class="nbofPeopleInput" value="">
     </div>
     <div id="final-container"></div>
   </div>
