--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
 
 
 
-
-
 -->
 
   <div id="logo">
@@ -69,13 +67,29 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
       <h4>Number of People</h4>
       <input type="text" class="nbofPeopleInput" value="">
     </div>
-    <div id="final-container"></div>
+    <div id="final-container">
+      <div id="tip">
+        <div id="tipPerson">
+          <h4>Tip Amount</h4>
+          <h5>/ person</h5>
+        </div>
+        <h3>4$</h3>
+      </div>
+      <div id="total">
+        <div id="totalPerson">
+          <h4>Total</h4>
+          <h5>/ person</h5>
+        </div>
+        <h3>4$</h3>
+      </div>
+      <input type="button" id="resetBtn" value="RESET">
+    </div>
   </div>
 
 
-  <div class="attribution">
+  <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Your Name Here</a>. -->
   </div>
 </body>
 
