Done with theinterface only javascript and hover is left

--- a/index.html
+++ b/index.html
@@ -50,37 +50,41 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
   </div>
 
   <div id="main-container">
-    <div id="bill-container">
-      <h4>Bill</h4>
-      <input type="text">
-    </div>
-    <div id="tip-container">
-      <h4>Select Tip %</h4>
-      <input type="button" class="tip-button" value="5%">
-      <input type="button" class="tip-button" value="10%">
-      <input type="button" class="tip-button" value="15%">
-      <input type="button" class="tip-button" value="25%">
-      <input type="button" class="tip-button" value="50%">
-      <input type="button" class="tip-button" value="Custom">
-    </div>
-    <div id="peopleAmount-container">
-      <h4>Number of People</h4>
-      <input type="text" class="nbofPeopleInput" value="">
+    <div id="main-content">
+      <div id="bill-container">
+        <h4>Bill</h4>
+        <input type="text">
+      </div>
+      <div id="tip-container">
+        <h4>Select Tip %</h4>
+        <input type="button" class="tip-button" value="5%">
+        <input type="button" class="tip-button" value="10%">
+        <input type="button" class="tip-button" value="15%">
+        <input type="button" class="tip-button" value="25%">
+        <input type="button" class="tip-button" value="50%">
+        <input type="button" class="tip-button" value="Custom">
+      </div>
+      <div id="peopleAmount-container">
+        <h4>Number of People</h4>
+        <input type="text" class="nbofPeopleInput" value="">
+      </div>
     </div>
     <div id="final-container">
-      <div id="tip">
-        <div id="tipPerson">
-          <h4>Tip Amount</h4>
-          <h5>/ person</h5>
+      <div id="amountPerson">
+        <div id="tip">
+          <div id="tipPerson">
+            <h4>Tip Amount</h4>
+            <h5>/ person</h5>
+          </div>
+          <h3>$0.00</h3>
         </div>
-        <h3>4$</h3>
-      </div>
-      <div id="total">
-        <div id="totalPerson">
-          <h4>Total</h4>
-          <h5>/ person</h5>
+        <div id="total">
+          <div id="totalPerson">
+            <h4>Total</h4>
+            <h5>/ person</h5>
+          </div>
+          <h3>$0.00</h3>
         </div>
-        <h3>4$</h3>
       </div>
       <input type="button" id="resetBtn" value="RESET">
     </div>
