--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
     <div id="main-content">
       <div id="bill-container">
         <h4>Bill</h4>
-        <input type="text">
+        <input type="text" value="" id="billAmountInput">
       </div>
       <div id="tip-container">
         <h4>Select Tip %</h4>
