made the Onfocus border change for the input fields

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
       </div>
       <div id="peopleAmount-container">
         <h4>Number of People</h4>
-        <input type="text" class="nbofPeopleInput" value="">
+        <input type="text" id="nbofPeopleInput" value="">
       </div>
     </div>
     <div id="final-container">
