Finished the Custom button. Can now turn into a text input and uses the verifyInput function

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
         <input type="button" class="tip-button" value="15%">
         <input type="button" class="tip-button" value="25%">
         <input type="button" class="tip-button" value="50%">
-        <input type="button" class="tip-button" value="Custom">
+        <input type="button" class="tip-button custombtn" value="Custom">
       </div>
       <div id="peopleAmount-container">
         <h4>Number of People</h4>
