Added the red warning when input field is empty

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
   <div id="main-container">
     <div id="main-content">
       <div id="bill-container">
-        <h4>Bill</h4>
+        <div id="textContainer1">
+          <h4>Bill</h4>
+        </div>
         <input type="text" value="" id="billAmountInput">
       </div>
       <div id="tip-container">
@@ -62,7 +64,9 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
         <input type="button" class="tip-button custombtn" value="Custom">
       </div>
       <div id="peopleAmount-container">
-        <h4>Number of People</h4>
+        <div id="textContainer2">
+          <h4 id="nbPeopletext">Number of People</h4>
+        </div>
         <input type="text" id="nbofPeopleInput" value="">
       </div>
     </div>
