Made the total amounts. Just need some fixing

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
             <h4>Tip Amount</h4>
             <h5>/ person</h5>
           </div>
-          <h3>$0.00</h3>
+          <h3 id="tipPerPerson">$0.00</h3>
         </div>
         <div id="total">
           <div id="totalPerson">
             <h4>Total</h4>
             <h5>/ person</h5>
           </div>
-          <h3>$0.00</h3>
+          <h3 id="totalPerPerson">$0.00</h3>
         </div>
       </div>
       <input type="button" id="resetBtn" value="RESET">
