Cleaned a bit of code

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
       <div id="bill-container">
         <div id="textContainer1">
           <h4>Bill</h4>
+          <h4 id="red-warning">Can't Be Zero</h4>
         </div>
         <input type="text" value="" id="billAmountInput">
       </div>
