--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Inside the MAIN DIV there will by 4 divs(1 for each type of conent)
 -->
 
   <div id="logo">
-    <img src="images/logo.svg" alt="">
+    <img src="logo.svg" alt="">
   </div>
 
   <div id="main-container">
